# rcman

./: .editorconfig  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  TODO.md  clippy.toml  deny.toml  justfile
.githooks/: pre-commit
.github/workflows/: ci.yml
examples/: backup_restore.rs  basic_usage.rs  derive_usage.rs  encrypted_storage.rs  gui_demo.rs  list_settings.rs  profiles_usage.rs  secret_settings.rs  with_validation.rs
rcman-derive/: .gitignore  Cargo.toml
rcman-derive/src/: lib.rs
rcman-derive/tests/ui/fail/: missing_category.rs  missing_category.stderr  semantic_validation.rs  semantic_validation.stderr  unknown_type_ban.rs  unknown_type_ban.stderr
rcman-derive/tests/ui/pass/: basic.rs  pathbuf_support.rs  qol_attributes.rs
src/: cache.rs  docs.rs  error.rs  events.rs  lib.rs  security.rs  storage.rs  sub_settings.rs  sync.rs
src/backup/: archive.rs  mod.rs  operations.rs  restore.rs  types.rs
src/config/: cache.rs  docs.rs  mod.rs  schema.rs  types.rs
src/credentials/: encrypted.rs  keychain.rs  memory.rs  mod.rs  types.rs
src/manager/: builder.rs  cache.rs  core.rs  env.rs  events.rs  hot_reload.rs  io.rs  mod.rs  operations.rs  profiles.rs
src/profiles/: manager.rs  migrator.rs  mod.rs
src/storage/: mod.rs  sqlite.rs
src/sub_settings/: mod.rs  multi_file.rs  single_file.rs  store.rs
src/utils/: mod.rs  security.rs  sync.rs  value.rs
tests/: backup_restore_test.rs  backup_secrets_subsettings_test.rs  credentials.rs  credentials_test.rs  derive_macro.rs  derive_macro_test.rs  edge_cases.rs  edge_cases_test.rs  hot_reload_test.rs  performance.rs  performance_test.rs  profile_backup_restore.rs  profiles.rs  profiles_test.rs  settings_workflow.rs  settings_workflow_test.rs  sqlite_integration.rs  stress_test.rs  sub_settings.rs  sub_settings_test.rs  toml_integration.rs  toml_integration_test.rs  yaml_integration.rs  yaml_integration_test.rs
tests/backup/: create_analyze.rs  main.rs  secret_policy.rs  sub_settings.rs
tests/backup_restore_test/: external_configs_tests.rs  restore_modes_tests.rs  secret_policy_tests.rs
tests/common/: mod.rs
