[workspace]
members = [".", "rcman-derive"]

[package]
name = "rcman"
version = "0.1.7"
edition = "2024"
authors = ["Hakan İSMAİL <hakanismail53@gmail.com>"]
description = "Framework-agnostic settings management with schema, backup/restore, secrets and derive macro support"
license = "MIT"
repository = "https://github.com/Zarestia-Dev/rcman"
readme = "README.md"
keywords = ["settings", "configuration", "backup", "preferences", "keychain"]
categories = ["config", "filesystem", "development-tools"]
rust-version = "1.88"

[package.metadata.docs.rs]
all-features = true

[features]
default = ["json", "backup"]
full = ["json", "toml", "yaml", "backup", "keychain", "encrypted-file", "derive", "profiles"]
json = []
toml = ["dep:toml"]
yaml = ["dep:serde_yaml"]
backup = ["dep:zip", "dep:sha2", "dep:tempfile"]
keychain = ["dep:keyring", "dep:keyring-core"]
encrypted-file = ["dep:aes-gcm", "dep:rand", "dep:base64", "dep:argon2"]
derive = ["dep:rcman-derive"]
profiles = []

[dependencies]
# Core (always included)
serde = { version = "1.0", features = ["derive"] }
thiserror = "2.0"
log = "0.4"
time = { version = "0.3", features = ["serde", "serde-well-known", "formatting", "macros"] }
regex = "1.12"
dirs = "6.0"
lru = "0.16"

# JSON (always included for now, required for settings)
serde_json = "1.0"

# Derive macro (optional) - use local path for workspace development
rcman-derive = { path = "rcman-derive", version = "0.1.7", optional = true }

# Backup (optional, default)
zip = { version = "8.2", default-features = false, features = ["deflate", "time", "aes-crypto"], optional = true }
sha2 = { version = "0.10", optional = true }
tempfile = { version = "3.26", optional = true }

# Encrypted file (optional)
aes-gcm = { version = "0.10", optional = true }
rand = { version = "0.10", optional = true }
base64 = { version = "0.22", optional = true }
argon2 = { version = "0.5", features = ["std"], optional = true }

# TOML storage (optional)
toml = { version = "1.0", optional = true }

# YAML storage (optional)
serde_yaml = { version = "0.9", optional = true }

# Keyring dependency (cross-platform with platform drivers via keyring-core)
keyring = { version = "4.0.0-rc.3", optional = true }
keyring-core = { version = "0.7.2", optional = true }

[dev-dependencies]
tempfile = "3.26"
env_logger = "0.11"
eframe = "0.33"

# Example declarations with required features
[[example]]
name = "derive_usage"
required-features = ["derive"]

[[example]]
name = "secret_settings"
required-features = ["keychain"]

[[example]]
name = "encrypted_storage"
required-features = ["encrypted-file"]

[[example]]
name = "backup_restore"
required-features = ["backup"]

[[example]]
name = "gui_demo"
required-features = ["backup"]

[[example]]
name = "profiles_usage"
required-features = ["profiles"]

[[test]]
name = "derive_macro_test"
required-features = ["derive"]

[[test]]
name = "profiles_test"
required-features = ["profiles"]

[[test]]
name = "toml_integration_test"
required-features = ["toml"]

[[test]]
name = "yaml_integration_test"
required-features = ["yaml"]
